<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhangyl.myapplication.InitStepOneFragment"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView2"
        style="@style/txt_34sp_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_ssid"
        android:visibility="gone"
        tools:layout_editor_absoluteX="372dp"
        tools:layout_editor_absoluteY="241dp"></TextView>

    <TextView
        android:id="@+id/textView4"
        style="@style/txt_34sp_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_pwd"
        android:visibility="gone"
        tools:layout_editor_absoluteX="372dp"
        tools:layout_editor_absoluteY="241dp"></TextView>

    <TextView
        android:id="@+id/textView5"
        style="@style/txt_34sp_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:text="@string/ip_name"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/guideline"></TextView>

    <TextView
        android:id="@+id/textView6"
        style="@style/txt_34sp_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/room_name"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/guideline2"></TextView>

    <TextView
        android:id="@+id/textView7"
        style="@style/txt_34sp_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/room_number"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView5"></TextView>

    <TextView
        android:id="@+id/textView8"
        style="@style/txt_34sp_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/textView7"></TextView>

    <TextView
        android:id="@+id/textView9"
        style="@style/txt_34sp_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/server_address"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"></TextView>


    <EditText
        android:id="@+id/WIFI_LIST"
        style="@style/edit_txt_300sp_width_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="372dp"
        tools:layout_editor_absoluteY="241dp" />

    <EditText
        android:id="@+id/WIFI_PWD_VALUE"
        style="@style/edit_txt_300sp_width_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="372dp"
        tools:layout_editor_absoluteY="241dp" />

    <EditText
        android:id="@+id/IP_VALUE"
        style="@style/edit_txt_300sp_width_white"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:digits="1234567890."
        android:singleLine="true"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/ROOM_NAME_VALUE"
        style="@style/edit_txt_300sp_width_white"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/ROOM_SIZE_VALUE" />

    <EditText
        android:id="@+id/ROOM_NUMBER_VALUE"
        style="@style/edit_txt_300sp_width_white"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/IP_VALUE" />

    <EditText
        android:id="@+id/ROOM_SIZE_VALUE"
        style="@style/edit_txt_300sp_width_white"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:digits="1234567890"
        android:singleLine="true"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/ROOM_NUMBER_VALUE" />

    <EditText
        android:id="@+id/SEVER_ADDRESS_VALUE"
        style="@style/edit_txt_300sp_width_white"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/ROOM_NAME_VALUE" />


    <Button
        android:id="@+id/BTN_NEXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5013928" />


</android.support.constraint.ConstraintLayout>
