<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhangyl.myapplication.View.InnerMeetingFragment"
    android:orientation="vertical">
    <!--上方标题区-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/room_name_title"
                android:text="会议室：九州同庆 K4-F3-B109"
                android:layout_marginRight="25dp"
                android:background="#349221"/>

            <TextView
                android:id="@+id/room_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="正在开会"
                android:layout_marginRight="25dp" />

            <TextView
                android:id="@+id/room_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="使用人：李涛" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <TextView
                android:id="@+id/text_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2014-08-09 10:11:12"/>

            <Button
                android:id="@+id/btn_sys_cfg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/global_cfg" />
        </LinearLayout>
    </FrameLayout>


    <!--下方内容区-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="6dp">

        <!--左下按钮、人脸扫描、语音收发区-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="6dp">

            <Button
                android:id="@+id/btn_stop_meeting"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/stop_meeting"
                android:layout_marginBottom="6dp"/>

            <Button
                android:id="@+id/btn_add_meeting_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/add_meeting_time" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="温度：24度"
                android:layout_marginBottom="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="湿度：13%"/>

        </LinearLayout>

        <View android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"/>

        <!--右下内容区-->
        <LinearLayout
            android:id="@+id/inner_meeting_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/meeting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="主题：关于祥子黄包车修理的指导方案"
                android:textSize="35dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/meeting_running"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_running"
                    android:textSize="24dp"/>

                <TextView
                    android:id="@+id/meeting_left_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="还有10分钟结束"
                    android:textSize="24dp"
                    android:layout_gravity="right"/>
            </FrameLayout>

            <ProgressBar
                android:id="@+id/meeting_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:progress="80"
                android:layout_marginBottom="6dp"
                style="@android:style/Widget.ProgressBar.Horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginBottom="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ctrl_bord"
                android:textSize="26dp"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dev_list_view"
                android:layout_gravity="center"
                android:minHeight="400dp"
                android:minWidth="210dp"
                android:background="@color/colorPrimary">

            </ListView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
